<resources>
    <string name="app_name">mixbyjames</string>
    <string name="activationCode">Activation code</string>
    <string name="activationCodeTopMessage">Please enter the activation code that was sent to you along with your email address. You will not be required to this again.</string>
    <string name="email">Email Address</string>
    <string name="activationErrorMessage">Sorry, the information entered is incorrect</string>
    <string name="activate">Activate</string>
    <string name="noActivation_code">Don\'t have an activation code?</string>
    <string name="retrieve_activation_code">Retrieve Activation Code</string>
    <string name="goBack">Go back</string>
    <string name="lostActivationCodeTopMessage">If you have lost your activation code please enter the email address below that you used to place your order and  we will resend it.</string>
    <string name="retrieveCodeMessage">We have sent your activation code to the above email address. Please check your spam folder if it is not in the inbox.</string>
    <string name="overall_volume">Overall Volume</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="pinkVolume">Pink Noise</string>
</resources>