<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:baselineAlignBottom="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topMessage"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_spinner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/audioLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topMessage">

            <ImageView
                android:id="@+id/playButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/view_play_pause_background"
                android:src="@drawable/ic_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pauseButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/view_play_pause_background"
                android:src="@drawable/ic_pause"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overallVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall_volume"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playButton" />

            <SeekBar
                android:id="@+id/volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overallVolume"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/view_progress_drawable"
                android:thumb="@drawable/view_thumb"
                android:indeterminate="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:text="@string/min"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/volume"
                app:layout_constraintStart_toStartOf="@id/volume"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:text="@string/max"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/volume"
                app:layout_constraintEnd_toEndOf="@id/volume"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>